# LogicGrowsOnTrees

./: .gitignore  CHANGELOG.md  LICENSE  LogicGrowsOnTrees-processes.cabal  LogicGrowsOnTrees.cabal  README-for-building-tests  README.md  TUTORIAL.md  USERS_GUIDE.md  Visitor-processes.cabal  Visitor.cabal  VisitorT.cabal  VisitorT.leo  build-and-test-all-the-things.sh  count-all-nqueens-solutions-parallel.hs  count-all-nqueens-solutions-using-processes.hs  count-all-nqueens-solutions-using-threads.hs  count-all-nqueens-solutions.hs  print-all-nqueens-solutions.hs  stack.yaml  template.hs  test-nqueens.hs  tests.hs
Control/: Visitor.hs
Control/Monad/Trans/: Visitor.hs
Control/Monad/Trans/Visitor/: Checkpoint.hs  Label.hs  Main.hs  Path.hs  Reactive.hs  Supervisor.hs  Worker.hs  WorkerQueue.hs  Workload.hs
Control/Visitor/: Checkpoint.hs  Label.hs  Main.hs  Path.hs  Supervisor.hs  Utils.hs  Worker.hs  Workload.hs
Control/Visitor/Examples/: Queens.hs  RoseTree.hs  Tree.hs
Control/Visitor/Examples/Queens/: Implementation.hs
Control/Visitor/Parallel/: Main.hs  Message.hs  Process.hs  Processes.hs  Threads.hs  Workgroup.hs
Control/Visitor/Parallel/BackEnd/: Processes.hs  Threads.hs
Control/Visitor/Parallel/Common/: Message.hs  Process.hs  ResultType.hs  Supervisor.hs  VisitorMode.hs  Worker.hs  Workgroup.hs
Control/Visitor/Supervisor/: Implementation.hs  RequestQueue.hs
Control/Visitor/Utils/: ExponentialMovingAverage.hs  Handle.hs  IntSum.hs  MonadStacks.hs  WordSum.hs  Word_.hs
Control/Visitor/Visitors/: RoseTree.hs
Data/: Semiring.hs
Data/Semiring/: NaturalInstances.hs
LogicGrowsOnTrees/: CHANGELOG.md  LogicGrowsOnTrees.cabal  TUTORIAL.md  build-and-test-all-the-things.sh
LogicGrowsOnTrees-processes/: CHANGELOG.md  LogicGrowsOnTrees-processes.cabal  build-and-test-all-the-things.sh
LogicGrowsOnTrees-processes/benchmarks/: benchmark.hs  targets.lst
LogicGrowsOnTrees-processes/examples/: count-all-nqueens-solutions.hs  count-all-trivial-tree-leaves.hs  targets.lst
LogicGrowsOnTrees-processes/tests/: targets.lst  tests.hs
LogicGrowsOnTrees/benchmarks/: targets.lst  tree-versus-list-fmap.hs  tree-versus-list-nqueens-using-bits.hs  tree-versus-list-nqueens-with-list-at-bottom.hs  tree-versus-list-unit-tree.hs
LogicGrowsOnTrees/examples/: count-all-trivial-tree-leaves.hs  print-all-nqueens-solutions.hs  print-some-nqueens-solutions-using-push.hs  targets.lst
LogicGrowsOnTrees/scaling/: N_17  N_19
LogicGrowsOnTrees/sources/: LogicGrowsOnTrees.hs
LogicGrowsOnTrees/sources/LogicGrowsOnTrees/: Location.hs  Path.hs  Testing.hs  Workload.hs
LogicGrowsOnTrees/sources/LogicGrowsOnTrees/Parallel/: Main.hs
LogicGrowsOnTrees/sources/LogicGrowsOnTrees/Utils/: Handle.hs  WordSum.hs
LogicGrowsOnTrees/tests/: targets.lst  test-Checkpoint.hs  test-Examples.hs  test-Supervisor.hs  test-Worker.hs  test-nqueens.hs
LogicGrowsOnTrees/tutorial/: targets.lst  tutorial-11.hs  tutorial-13.hs  tutorial-2.hs  tutorial-3.hs  tutorial-5.hs  tutorial-6.hs  tutorial-7.hs
benchmarks/: balancers.hs  benchmark.hs  nqueens-versus-cpus.hs  nqueens-versus-list.hs  run-versus-cpus-with-delays.hs  run-versus-cpus.hs  run-versus-list.hs  targets.lst  tree-builder-versus-list-nqueens.hs  tree-builder-versus-list-trivial-tree.hs  tree-generator-versus-list-nqueens.hs  tree-generator-versus-list-trivial-tree.hs  tree-versus-list-bind-and-mplus.hs  tree-versus-list-bind.hs  tree-versus-list-fmap.hs  tree-versus-list-lopsided-null-tree.hs  tree-versus-list-lopsided-trivial-tree.hs  tree-versus-list-nqueens-using-bits.hs  tree-versus-list-nqueens-using-sets.hs  tree-versus-list-nqueens-with-list-at-bottom.hs  tree-versus-list-nqueens-with-nothing-at-bottom.hs  tree-versus-list-nqueens.hs  tree-versus-list-null-tree.hs  tree-versus-list-trivial-tree.hs  tree-versus-list-unit-tree.hs  visitor-versus-list-nqueens.hs  visitor-versus-list-trivial-tree.hs
c-sources/: queens.c  queens.h
examples/: count-all-nqueens-solutions-using-processes.hs  count-all-nqueens-solutions.hs  count-all-trivial-tree-leaves.hs  print-all-nqueens-solutions.hs  print-an-nqueens-solution.hs  print-some-nqueens-solutions-using-pull.hs  print-some-nqueens-solutions-using-push.hs  readme-full.hs  readme-simple.hs  readme.hs  sum-all-trivial-tree-nodes.hs
miscellaneous/: linux-strip-folds-from.sh  strip-folds-from.sh
scaling/: N_18  N_19  data.ods  scaling.gp
sources/: LogicGrowsOnTrees.hs  Visitor.hs
sources/LogicGrowsOnTrees/: Checkpoint.hs  Location.hs  Path.hs  Testing.hs  Utils.hs  Workload.hs
sources/LogicGrowsOnTrees/Examples/: MapColoring.hs  Queens.hs
sources/LogicGrowsOnTrees/Examples/Queens/: Advanced.hs
sources/LogicGrowsOnTrees/Parallel/: ExplorationMode.hs  Main.hs  Purity.hs
sources/LogicGrowsOnTrees/Parallel/Adapter/: Processes.hs  Threads.hs
sources/LogicGrowsOnTrees/Parallel/Common/: ExplorationMode.hs  Message.hs  Process.hs  Purity.hs  RequestQueue.hs  Supervisor.hs  Worker.hs  Workgroup.hs
sources/LogicGrowsOnTrees/Utils/: Handle.hs  IntSum.hs  MonadPlusForest.hs  PerfectTree.hs  WordSum.hs  Word_.hs
sources/Visitor/: Checkpoint.hs  Label.hs  Location.hs  Path.hs  Utils.hs  Workload.hs
sources/Visitor/Examples/: Queens.hs  Tree.hs
sources/Visitor/Examples/Queens/: Advanced.hs  Implementation.hs
sources/Visitor/Parallel/: Main.hs
sources/Visitor/Parallel/Adapter/: Processes.hs  Threads.hs
sources/Visitor/Parallel/BackEnd/: Processes.hs  Threads.hs
sources/Visitor/Parallel/Common/: ExplorationMode.hs  Message.hs  Process.hs  Supervisor.hs  VisitorMode.hs  Worker.hs  (+1 more)
sources/Visitor/Utils/: Handle.hs  IntSum.hs  MonadPlusForest.hs  MonadStacks.hs  PerfectTree.hs  Tree.hs  WordSum.hs  Word_.hs
tests/: run-all-the-tests.sh  targets.lst  test-Location.hs  test-LogicGrowsOnTrees.hs  test-Path.hs  test-RequestQueue.hs  test-Threads.hs  test-Utils.hs  test-helpers.hs  test-memory.hs  test-nqueens.hs  tests.hs
tutorial/: tutorial-1.hs  tutorial-10.hs  tutorial-11.hs  tutorial-12.hs  tutorial-4.hs  tutorial-6.hs  tutorial-7.hs  tutorial-8.hs  tutorial-9.hs
(+26 files in other folders)
