Name:                LogicGrowsOnTrees-processes
Version:             1.0.0.1
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcrosswhite@gmail.com>
Synopsis:            an adapter for LogicGrowsOnTrees that uses multiple processes for parallelism
Cabal-version:       >=1.8
Build-type:          Simple
Category:            Control, Distributed Computing, Logic, Parallelism
Description:
    This package provides a adapter for the LogicGrowsOnTrees package that uses
    multiple processes for parallelism; see the module documentation for more
    details.

Bug-reports: https://github.com/gcross/LogicGrowsOnTrees-processes/issues

Source-Repository head
    Type:     git
    Location: git://github.com/gcross/LogicGrowsOnTrees-processes.git

Source-Repository this
    Type:     git
    Location: git://github.com/gcross/LogicGrowsOnTrees-processes.git
    Tag:      1.0.0.1


Library
    Build-depends:
        LogicGrowsOnTrees >= 1.0 && < 1.2,
        base > 4 && < 5,
        bytestring >= 0.9 && < 0.11,
        cereal >= 0.3 && < 0.5,
        cmdtheline == 0.2.*,
        containers >= 0.4 && < 0.6,
        filepath == 1.3.*,
        FindBin == 0.0.*,
        hslogger == 1.2.*,
        hslogger-template == 2.0.*,
        MonadCatchIO-transformers == 0.3.*,
        process == 1.1.*,
        transformers >= 0.2 && < 0.4
    Exposed-modules:
        LogicGrowsOnTrees.Parallel.Adapter.Processes
    Hs-source-dirs: sources
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing
    if flag(pattern-warnings)
        GHC-Options: -fwarn-incomplete-patterns

Flag warnings
    Description: Enables most warnings.
    Default:     False

Flag pattern-warnings
    Description: Enables only pattern match warnings.
    Default:     False

Flag examples
    Description: Enable building the executables.
    Default:     False

Executable count-all-nqueens-solutions
    Main-is: count-all-nqueens-solutions.hs
    Hs-source-dirs: examples
    Build-depends:
        LogicGrowsOnTrees-processes,
        LogicGrowsOnTrees >= 1.0 && < 1.2,
        base > 4 && < 5,
        cereal >= 0.3 && < 0.5,
        cmdtheline == 0.2.*
    if flag(examples)
        Buildable: True
    else
        Buildable: False
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing
    if flag(pattern-warnings)
        GHC-Options: -fwarn-incomplete-patterns

Executable count-all-trivial-tree-leaves
    Main-is: count-all-trivial-tree-leaves.hs
    Hs-source-dirs: examples
    Build-depends:
        LogicGrowsOnTrees-processes,
        LogicGrowsOnTrees >= 1.0 && < 1.2,
        base > 4 && < 5,
        cereal >= 0.3 && < 0.5,
        cmdtheline == 0.2.*
    if flag(examples)
        Buildable: True
    else
        Buildable: False
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing
    if flag(pattern-warnings)
        GHC-Options: -fwarn-incomplete-patterns

Benchmark benchmark
    Type: exitcode-stdio-1.0
    Main-is: benchmark.hs
    Hs-source-dirs: benchmarks
    Build-depends:
        LogicGrowsOnTrees-processes,
        LogicGrowsOnTrees >= 1.0 && < 1.2,
        base > 4 && < 5,
        criterion >= 0.6 && < 0.9
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing

Test-Suite tests
    Type: exitcode-stdio-1.0
    Main-is: tests.hs
    Hs-source-dirs: tests
    Build-depends:
        LogicGrowsOnTrees-processes,
        LogicGrowsOnTrees >= 1.0 && < 1.2,
        base > 4 && < 5,
        cereal >= 0.3 && < 0.5,
        hslogger == 1.2.*,
        hslogger-template == 2.0.*,
        HUnit == 1.2.*,
        random == 1.0.*,
        test-framework >= 0.6 && < 0.9,
        test-framework-hunit >= 0.2 && < 0.4,
        transformers >= 0.2 && < 0.4
    if flag(warnings)
        GHC-Options: -Wall -fno-warn-name-shadowing
    if flag(pattern-warnings)
        GHC-Options: -fwarn-incomplete-patterns
