Name:                LogicGrowsOnTrees
Version:             2.0
License:             BSD3
License-file:        LICENSE
Author:              Gregory Crosswhite
Maintainer:          Gregory Crosswhite <gcrosswhite@gmail.com>
Synopsis:            a parallel implementation of logic programming using distributed tree exploration
Cabal-version:       >=1.10
Build-type:          Simple
Category:            Control, Distributed Computing, Logic, Parallelism

Bug-reports: https://github.com/gcross/LogicGrowsOnTrees/issues

Library
  build-depends:       base
                     , bytestring
                     , cereal
                     , containers
                     , directory
                     , exceptions
                     , flow
                     , hslogger
                     , hslogger-template
                     , lens
                     , multiset
                     , mtl
                     , operational
                     , optparse-applicative
                     , prefix-units
                     , PSQueue
                     , sequential-index
                     , split
                     , stm
                     , time
                     , transformers

                     , HUnit
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , smallcheck
                     , test-framework
                     , uuid
  exposed-modules:     LogicGrowsOnTrees
                     , LogicGrowsOnTrees.Checkpoint
                     , LogicGrowsOnTrees.Examples.MapColoring
                     , LogicGrowsOnTrees.Examples.Queens
                     , LogicGrowsOnTrees.Examples.Queens.Advanced
                     , LogicGrowsOnTrees.Location
                     , LogicGrowsOnTrees.Parallel.Adapter.Threads
                     , LogicGrowsOnTrees.Parallel.Common.Message
                     , LogicGrowsOnTrees.Parallel.Common.Process
                     , LogicGrowsOnTrees.Parallel.Common.RequestQueue
                     , LogicGrowsOnTrees.Parallel.Common.Supervisor
                     , LogicGrowsOnTrees.Parallel.Common.Worker
                     , LogicGrowsOnTrees.Parallel.Common.Workgroup
                     , LogicGrowsOnTrees.Parallel.ExplorationMode
                     , LogicGrowsOnTrees.Parallel.Main
                     , LogicGrowsOnTrees.Parallel.Purity
                     , LogicGrowsOnTrees.Path
                     , LogicGrowsOnTrees.Testing
                     , LogicGrowsOnTrees.Utils.Handle
                     , LogicGrowsOnTrees.Utils.PerfectTree
                     , LogicGrowsOnTrees.Utils.WordSum
                     , LogicGrowsOnTrees.Workload
  Other-modules:       LogicGrowsOnTrees.Parallel.Common.Supervisor.Implementation
  HS-source-dirs:      sources
  GHC-Options:         -Werror=incomplete-patterns
                       -Werror=missing-fields
                       -Werror=missing-methods
  Default-Language:    Haskell2010

Test-Suite test-helpers
    Type: exitcode-stdio-1.0
    Main-is: test-helpers.hs
    Hs-source-dirs: tests
    Build-depends:     LogicGrowsOnTrees
                     , base
                     , containers
                     , exceptions
                     , hslogger
                     , QuickCheck
                     , quickcheck-instances
                     , test-framework
                     , test-framework-quickcheck2
  Default-Language:    Haskell2010

Test-Suite test-LogicGrowsOnTrees
    Type: exitcode-stdio-1.0
    Main-is: test-LogicGrowsOnTrees.hs
    Hs-source-dirs: tests
    Build-depends:     LogicGrowsOnTrees
                     , base
                     , containers
                     , hslogger
                     , HUnit
                     , QuickCheck
                     , quickcheck-instances
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , transformers
  Default-Language:    Haskell2010

Test-Suite test-Checkpoint
    Type: exitcode-stdio-1.0
    Main-is: test-Checkpoint.hs
    Hs-source-dirs: tests
    Build-depends:     LogicGrowsOnTrees
                     , base
                     , cereal
                     , containers
                     , exceptions
                     , hslogger
                     , HUnit
                     , lens
                     , QuickCheck
                     , quickcheck-instances
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , uuid
  Default-Language:    Haskell2010

Test-Suite test-Examples
    Type: exitcode-stdio-1.0
    Main-is: test-Examples.hs
    Hs-source-dirs: tests
    Build-depends:     LogicGrowsOnTrees
                     , base
                     , hslogger
                     , HUnit
                     , operational
                     , random
                     , QuickCheck
                     , quickcheck-instances
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  Default-Language:    Haskell2010

Test-Suite test-Location
    Type: exitcode-stdio-1.0
    Main-is: test-Location.hs
    Hs-source-dirs: tests
    Build-depends:     LogicGrowsOnTrees
                     , base
                     , hslogger
                     , QuickCheck
                     , quickcheck-instances
                     , stm
                     , test-framework
                     , test-framework-quickcheck2
  Default-Language:    Haskell2010

Test-Suite test-Utils
    Type: exitcode-stdio-1.0
    Main-is: test-Utils.hs
    Hs-source-dirs: tests
    Build-depends:     LogicGrowsOnTrees
                     , base
                     , directory
                     , hslogger
                     , QuickCheck
                     , quickcheck-instances
                     , smallcheck
                     , test-framework
                     , test-framework-quickcheck2
                     , test-framework-smallcheck
                     , uuid
  Default-Language:    Haskell2010
